# FloorVana-backend

./: Dockerfile  bleh.py  new.swift  requirements.txt  vectorization.py  write_pickle.py
log/: continue_train_20240917_162445.txt  continue_train_20240917_162718.txt  continue_train_20240917_162727.txt  continue_train_20240917_162831.txt
synth/: floorplan_synth.py  iphone_image = iVBORw0KGgoAAAANSUhEUgAAA.ps1  main.py  main2.py  synth.py  synth_20240927_120143.txt  synth_20240927_135221.txt  synth_20250212_130919.txt  synth_20250212_131113.txt  synth_20250212_131230.txt  synth_20250212_133024.txt  test_image_preprocessing.py  utils.py  vectorization.py
synth/models/: basic.py
synth/trained_model/: continue_fc2_70.pth
train/Continue/: config_continue.py  result_continue.csv  train_continue.py  try.py
train/Continue/log/: continue_train_20240917_152451.txt  continue_train_20240917_152752.txt  continue_train_20240917_153206.txt  continue_train_20240917_153856.txt  continue_train_20240917_154146.txt  continue_train_20240917_154358.txt  (+20 more)
train/Living/: config_living.py  result_living.csv  train_living.py
visualization/: CMakeCache.txt  Deeplayout.sln
visualization/Deeplayout/: CMakeLists.txt  Deeplayout.vcxproj  Deeplayout.vcxproj.filters  Makefile  deeplayout.cpp  deeplayout.h  deeplayout.ui  main.cpp  main.py  polygon.cpp  polygon.h  rudratry.py  structure.cpp  structure.h
visualization/Deeplayout/Deeplayout.app/Contents/: Info.plist
visualization/Deeplayout/GeneratedFiles/: moc_deeplayout.cpp  qrc_deeplayout.cpp  ui_deeplayout.h
(+5 files in other folders)
